# cpp_experiments

./: '  .gitignore  README.md
cellular_automata/: .gitignore  CMakeLists.txt  CellGrid.cpp  CellGrid.hpp  Makefile  README.md  build.sh  main.cpp
cellular_automata/include/: CellGrid.hpp  DrawLine.hpp  Utils.hpp
cellular_automata/src/: CellGrid.cpp  DrawLine.cpp  Utils.cpp  main.cpp
ls/: CMakeLists.txt  README.md  build.py  build.sh  changelog.txt  package.py  pls.config
ls/include/: AnsiUtils.hpp  ArgParsing.hpp  Defaults.hpp  File.hpp  FileCollection.hpp  Utils.hpp  Version.hpp  border.hpp  configParsing.hpp
ls/src/: AnsiUtils.cpp  ArgParsing.cpp  Defaults.cpp  File.cpp  FileCollection.cpp  Utils.cpp  Version.cpp  border.cpp  configParsing.cpp  fileCollection.cpp  main.cpp
ls/tests/: argParsing.cpp  file.cpp  tests.cpp
sfml/: Makefile  main.cpp
tui_application_launcher/: CMakeLists.txt  README.md  build.sh  flake.nix
tui_application_launcher/include/: Application.hpp  CompSearchBar.cpp  CompSearchBar.hpp  IconMap.hpp
tui_application_launcher/src/: AppMenu.cpp  Application.cpp  CompSearchBar.cpp  IconMap.cpp  main.cpp
tui_project/: CMakeLists.txt  build.sh
tui_project/src/: main.cpp
